# dummydoc

./: README.md  mypy.ini  pyproject.toml
.github/workflows/: tests.yml
dummydoc/: main.py  tiffprinter.py
