[tool.poetry]
name = "dummydoc"
version = "0.1.0"
description = ""
authors = ["Jesper Hermansen <jeshe@aarhus.dk>"]
maintainers = ["Aarhus Stadsarkiv <stadsarkiv@aarhus.dk>"]
license = "GPL-3.0"
readme = "README.md"
homepage = "https://www.aarhusstadsarkiv.dk/"

[tool.poetry.dependencies]
python = "^3.9"
Pillow = "^8.3.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
pytest-cov = "^2.11"
black = "^20.8b1"
flake8 = "^4.0.1"
mypy = "^0.812"

[tool.black]
line-length = 79
exclude = ".venv"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

